assets/app.css
/* ... */
.album .cover {
  width: auto;
  height: 70px;
  max-height: 100%;
  border-radius: 2px;
}

.album .album {
  font-size: 22px;
}

.album .date {
  font-size: 10px;
}

.album .albumartist {
  font-size: 14px;
}

#main span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#main-box {
  width: 100%;
  height: 100%;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
}

#main-cover {
  position: relative;
  width: 70%;
  height: 70%;
  order: -1;
  flex: 0 0 auto;
}

@media (orientation: portrait) {
  #main-cover {
    width: 70vw;
    height: 70vw;
  }
}

@media (orientation: landscape) {
  #main-cover {
    width: 35vw;
    height: 35vw;
  }
}

#main-cover-img {
  position: absolute;
  left: 5%;
  top: 5%;
  width: 90%;
  height: 90%;
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 1%;
}

#main-cover-img.circled {
  background-size: cover;
  border-radius: 100%;
}

#main-elapsed-circle {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  stroke-width: 4;
}

#main-elapsed-circle .inactive {
  stroke-opacity: 0.5;
}

#main-elapsed-circle.hide {
  visibility: hidden;
}

#main-title {
  font-size: 20px;
}

#main-artist {
  font-size: 20px;
}

#system h1,
#system h3 {
  margin: 10px;
}

#system .note {
  list-style-type: none;
  padding: 0 20px;
}

#system .note li {
  align-items: center;
  display: flex;
}

#system .note li .description {
  font-size: 18px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  flex: 1 1 auto;
  padding: 8px 0;
}

#system .note li .value-expand {
  flex: 1 1 auto;
}

.config-range {
  padding: 0;
  margin: 20px 0;
  box-sizing: border-box;
  width: 100%;
  background-color: #404040;
  appearance: none;
  -webkit-appearance: none;
  height: 4px;
  border-radius: 4px;
  outline: none;
  transition: background-color 0.2s 0s ease;
}

.dark .config-range {
  background-color: #e0e0e0;
}

.config-range::-moz-range-track {
  -moz-appearance: none;
  appearance: none;
  background-color: #404040;
  transition: background-color 0.2s 0s ease;
}

.dark .config-range::-moz-range-track {
  background-color: #e0e0e0;
}

.config-range::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  border: solid 3px #404040;
  width: 30px;
  height: 30px;
  border-radius: 30px;
  background-color: #ffffff;
  transition: border 0.2s 0s ease, background-color 0.2s 0s ease;
}

.dark .config-range::-webkit-slider-thumb {
  border: solid 3px #e0e0e0;
  background-color: #202020;
}

.config-range::-moz-range-thumb {
  -moz-appearance: none;
  appearance: none;
  border: solid 3px #404040;
  width: 30px;
  height: 30px;
  border-radius: 30px;
  background-color: #ffffff;
}

.dark .config-range::-moz-range-thumb {
  border: solid 3px #e0e0e0;
  background-color: #202020;
}

.switch {
  margin: 5px;
  width: 100px;
  height: 30px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.switch input {
  display: none;
}

.switch label,
.switch input:checked + label {
  position: relative;
  display: block;
  width: 100px;
  height: 30px;
  border-radius: 30px;
  border: solid 3px #404040;
  box-sizing: border-box;
  transition: border 0.2s 0s ease;
}

.dark .switch label,
.dark .switch input:checked + label {
  border: solid 3px #e0e0e0;
}

.switch label:before,
.switch label:after {
  content: "";
  display: block;
  position: absolute;
  top: -3px;
}

.switch label:before {
  left: -3px;
  background-color: #404040;
  height: 30px;
  width: 40px;
  border-radius: 30px;
  transition: background-color 0.2s 0s ease, width 0.2s 0s ease;
}

.dark .switch label:before {
  background-color: #e0e0e0;
}

.switch label:after {
  left: -3px;
  width: 56px;
  background-color: #ffffff;
  height: 30px;
  border: solid 3px #404040;
  border-radius: 30px;
  box-sizing: border-box;
  transition: background-color 0.2s 0s ease, border 0.2s 0s ease, left 0.2s 0s ease;
}

.dark .switch label:after {
  background-color: #202020;
  border: solid 3px #e0e0e0;
}

.switch input:checked + label:before {
  width: 100px;
}

.switch input:checked + label:after {
  left: 41px;
}

.button-simple {
  border-radius: 24px;
  height: 30px;
  margin: 5px;
  display: flex;
  align-items: center;
  padding: 0 24px;
  font-size: 18px;
  color: #e0e0e0;
  background-color: #404040;
  box-sizing: border-box;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  transition: background-color 0.2s 0s ease, color 0.2s 0s ease, padding 0.2s 0s linear;
}

.animation .button-simple:hover {
  animation: hover_img 0.5s linear 0s;
}

.button-simple.active,
.button-simple:active {
  color: #a0a0a0;
  padding: 4px 24px 0 24px;
}

.button-simple:disabled {
  animation: none;
  color: #a0a0a0;
  background-color: #303030;
  padding: 4px 24px 0 24px;
}

.dark .button-simple {
  color: #404040;
  background-color: #e0e0e0;
}

.dark .button-simple.active,
.dark .button-simple:active {
  color: #808080;
}

.dark .button-simple:disabled {
  animation: none;
  color: #808080;
  background-color: #f0f0f0;
}

.tool-select {
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100px;
  height: 30px;
  border: none;
  border-radius: 30px;
  background-color: #404040;
  font-size: 18px;
  color: #ffffff;
  padding: 5px 5px 0 50px;
  margin: 5px;
  transition: background-color 0.2s 0s ease, color 0.2s 0s ease;
}

.tool-select:-moz-focusring {
  outline: 0;
  color: transparent;
  text-shadow: 0 0 0 #ffffff;
  transition: none;
}

.dark .tool-select {
  background-color: #e0e0e0;
  color: #404040;
}

.dark .tool-select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #404040;
}

#popup-box {
  position: fixed;
  top: 70px;
  right: 0;
  z-index: 101;
}
/* ... */

